Hover background changinf for button statistic

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,9 @@ button[id='showStatisticsBtn'] {
     float: right;
 }
 
-
+button[id='showStatisticsBtn']:hover {
+    background-color: #4280d1;
+}
 
 /* Стили для всплывающего окна */
 .modal {
